# Polygon-Rendering-OpenGl

./: .gitignore  CMakeLists.txt  IndexBuffer.cpp  IndexBuffer.hpp  LICENSE  README.md  VertexArray.cpp  VertexArray.hpp  VertexAttribute.cpp  VertexAttribute.hpp  VertexBuffer.cpp  VertexBuffer.hpp  error_handle.cpp  error_handle.hpp  files_io.hpp  main.cpp  opengl_types.hpp  polygon_api.cpp  polygon_api.hpp  shader.cpp  shader.hpp
Resources/GLEW/: glew.pc
Resources/GLEW/include/GL/: glew.h
Resources/shaders/: fragment.shader  vertex.shader
api_files/: polygon_api.hpp
src/: IndexBuffer.hpp  VertexArray.cpp  VertexArray.hpp  VertexAttribute.cpp  VertexAttribute.hpp  VertexBuffer.cpp  VertexBuffer.hpp  files_io.cpp  files_io.hpp  opengl_types.cpp  opengl_types.hpp  shader.cpp  shader.hpp
